# learning-opengl

./: CMakeLists.txt  main.cpp
common/: loadShader.cpp  loadShader.h
shaders/: SimpleFragmentShader.glsl  SimpleVertexShader.glsl
